# sentrial-assistant

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  SPEC.md  pyproject.toml  railway.toml  requirements.txt  setup_py2app.py
native/: sentrial-mic.swift
scripts/: build_app.sh  build_py2app.sh  com.sentrial.daemon.plist  com.sentrial.menubar.plist  install.sh  sentrial-widget.scriptable.js
sentrial/config/: settings.example.toml  system_prompt.md
sentrial/core/: agent.py  audit.py  confirmation.py  context_cache.py  context_prefetch.py  daemon.py  google_oauth.py  memory.py  paths.py  reflection.py  reminders.py  secrets.py  task_runner.py
sentrial/evolution/: distill.py  integrity.py  kg.py  lessons.py  loop.py  metrics.py  playbooks.py  profile.py  program.md  proposals.py  replay.py  reset.py  retrieval.py  self_profile.py  task_estimates.py  trials.py
sentrial/evolution/base/: self_profile.yaml  system_prompt.md  user_profile.yaml
sentrial/evolution/base/lessons/: README.md
sentrial/evolution/base/playbooks/: README.md
sentrial/inputs/: menubar.py  tts.py  voice.py  webhook.py
sentrial/mcps/: base.py
sentrial/mcps/calendar/: server.py
sentrial/mcps/creative/: server.py
sentrial/mcps/evolution/: server.py
sentrial/mcps/gmail/: server.py
sentrial/mcps/notion/: server.py
sentrial/mcps/proposals/: generator.py
sentrial/mcps/proposals/templates/: _shared.py  pursuit.py  (+1 more)
sentrial/mcps/reminders/: server.py
sentrial/mcps/scheduling/: server.py
sentrial/outputs/: notify.py
sentrial/ui/: index.html  manifest.json  sw.js
